--- a/carla/package.json
+++ b/carla/package.json
@@ -45,6 +45,6 @@
     "prettier": "2.5.1"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "*.{js,scss}": "prettier --write"
   }
 }
