--- a/carla/package.json
+++ b/carla/package.json
@@ -40,11 +40,9 @@
     ]
   },
   "devDependencies": {
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "lint-staged": "^12.1.7",
-    "prettier": "2.5.1"
-  },
-  "lint-staged": {
-    "*.{js,scss}": "prettier --write"
+    "prettier": "2.5.1",
+    "pretty-quick": "^3.1.3"
   }
 }
