--- a/carla/package.json
+++ b/carla/package.json
@@ -40,9 +40,14 @@
     ]
   },
   "devDependencies": {
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
     "prettier": "2.5.1",
     "pretty-quick": "^3.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
