--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "husk": "^0.5.3",
     "husky": "^4.3.8",
     "lint-staged": "^12.1.7",
     "prettier": "2.5.1",
