--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "sass": "^1.47.0",
+    "type-fest": "^2.19.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
