--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scroll": "^1.8.4",
     "sass": "^1.47.0",
     "type-fest": "^2.19.0",
+    "typescript": "^4.8.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
